--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -25,8 +25,15 @@ body{
     align-items: center;
 }
 
+#loader.done{
+    animation: loaderOut 1s ease-in;
+    animation-fill-mode: forwards;
+}
+
 #loader-inner{
-    display: none;
+ opacity: 0;
+ animation: opacity 1s ease-in;
+ animation-fill-mode: forwards;
 }
 
 #loader-expand{
@@ -37,7 +44,6 @@ body{
     animation: loader 3s ease-in;
     animation-fill-mode: forwards;
 }
-
 
 /*-------------Area Specific Styles-------------*/
 /*Trianglify BG*/
