Fixed small bug with multi-select, removed old files

--- a/src/assets/sass/_helpers.scss
+++ b/src/assets/sass/_helpers.scss
@@ -12,6 +12,14 @@
     text-align: center;
 }
 
+.text-left{
+    text-align: left;
+}
+
+.text-right{
+    text-align: right;
+}
+
 .text-sm{
     font-size: .75em;
 }
